fixed with on small screens

--- a/src/pages/ShareCartPage/style.css
+++ b/src/pages/ShareCartPage/style.css
@@ -4,6 +4,6 @@
   align-items: center;
 
   .cards-container {
-    width: 50%;
+    width: min(100%, 900px);
   }
 }
